Update csvanalyser and include all plots

--- a/TestData/PeopleLocaliser/csvanalysis.ipynb
+++ b/TestData/PeopleLocaliser/csvanalysis.ipynb
@@ -113,7 +113,7 @@
     "    plt.savefig('Distance-'+str(Measurement.GTDist)+'m'+str(Measurement.GTAngle)+'.png', dpi=1200)\n",
     "\n",
     "    title=\"GTAngle=\"+str(round(Measurement.GTAngle,2))+\"°\"+\" GTDist=\"+str(round(Measurement.GTDist,2))+\"m, \"+\"min=\"+str(round(Measurement.minAngle,2))+\"°, \"+\"mean=\"+str(round(Measurement.meanAngle,2))+\"°, \"+\"max=\"+str(round(Measurement.maxAngle,2))+\"°\"\n",
-    "    Measurement.df.plot(kind='scatter', x='iteration', y='distance',c='b',title=title,s=2) \n",
+    "    Measurement.df.plot(kind='scatter', x='iteration', y='angle',c='b',title=title,s=2) \n",
     "\n",
     "    plt.axhline(Measurement.meanAngle, color='g')\n",
     "\n",
