--- a/TestData/HRI/Questionnaire.ipynb
+++ b/TestData/HRI/Questionnaire.ipynb
@@ -85,9 +85,8 @@
     "plt.xlabel(\"Tested aspect\")\n",
     "plt.grid(color='gray', linestyle='-', linewidth=.25)\n",
     "plt.ylim((1,7))\n",
-    "plt.legend()\n",
-    "plt.savefig('HRIScore.png', dpi=200)\n",
-    "\n"
+    "plt.legend(loc=\"lower right\")\n",
+    "plt.savefig('HRIScore.png', dpi=200)"
    ]
   }
  ],
