Added graphs for individual questions

--- a/TestData/HRI/Questionnaire.ipynb
+++ b/TestData/HRI/Questionnaire.ipynb
@@ -48,6 +48,26 @@
     "\n",
     "        self.safety = ((self.df.iloc[:,17].sum() + self.df.iloc[:,18].sum() \n",
     "            + self.df.iloc[:,19].sum() + self.df.iloc[:,20].sum())/(self.participants*4))\n",
+    "\n",
+    "        general = [1, 2, 3, 4, 5]\n",
+    "        self.Gq = []\n",
+    "        for i in general:\n",
+    "            self.Gq.append(self.df.iloc[:,i].sum()/self.participants)\n",
+    "\n",
+    "        comfort = [9, 10, 11, 12]\n",
+    "        self.Cq = []\n",
+    "        for i in comfort:\n",
+    "            self.Cq.append(self.df.iloc[:,i].sum()/self.participants)\n",
+    "\n",
+    "        trust = [13, 14, 15, 16, 21]\n",
+    "        self.Tq = []\n",
+    "        for i in trust:\n",
+    "            self.Tq.append(self.df.iloc[:,i].sum()/self.participants)\n",
+    "\n",
+    "        safety = [17, 18, 19, 20]\n",
+    "        self.Sq = []\n",
+    "        for i in safety:\n",
+    "            self.Sq.append(self.df.iloc[:,i].sum()/self.participants)\n",
     "    \n",
     "    "
    ]
@@ -61,8 +81,151 @@
     "testA = HRIdata(dfA, 5)\n",
     "testB = HRIdata(dfB, 5)\n",
     "testC = HRIdata(dfC, 5)\n",
-    "testD = HRIdata(dfD, 5)\n",
+    "testD = HRIdata(dfD, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# General graph\n",
     "\n",
+    "idth = 0.3\n",
+    "labels = ['1', '2', '3', '4', '5']\n",
+    "x_axis = np.arange(len(labels))\n",
+    "\n",
+    "dataA = testA.Gq\n",
+    "dataB = testB.Gq\n",
+    "dataC = testC.Gq\n",
+    "dataD = testD.Gq\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.title('Likert score of General questions') \n",
+    "\n",
+    "plt.bar(x_axis - 0.3, dataA, color='red', width=0.2, label = 'A')\n",
+    "plt.bar(x_axis - 0.1, dataB, color='blue', width=0.2, label = 'B')\n",
+    "plt.bar(x_axis + 0.1, dataC, color='green', width=0.2, label = 'C')\n",
+    "plt.bar(x_axis + 0.3, dataD, color='purple', width=0.2, label = 'D')\n",
+    "\n",
+    "plt.xticks(x_axis, labels)\n",
+    "plt.ylabel(\"Likert score\")\n",
+    "plt.xlabel(\"Question number\")\n",
+    "plt.grid(color='gray', linestyle='-', linewidth=.25)\n",
+    "plt.ylim((1,7))\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "plt.savefig('Generalscore.png', dpi=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Comfort graph\n",
+    "\n",
+    "idth = 0.3\n",
+    "labels = ['6', '7', '8', '9']\n",
+    "x_axis = np.arange(len(labels))\n",
+    "\n",
+    "dataA = testA.Cq\n",
+    "dataB = testB.Cq\n",
+    "dataC = testC.Cq\n",
+    "dataD = testD.Cq\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.title('Likert score of Comfort questions') \n",
+    "\n",
+    "plt.bar(x_axis - 0.3, dataA, color='red', width=0.2, label = 'A')\n",
+    "plt.bar(x_axis - 0.1, dataB, color='blue', width=0.2, label = 'B')\n",
+    "plt.bar(x_axis + 0.1, dataC, color='green', width=0.2, label = 'C')\n",
+    "plt.bar(x_axis + 0.3, dataD, color='purple', width=0.2, label = 'D')\n",
+    "\n",
+    "plt.xticks(x_axis, labels)\n",
+    "plt.ylabel(\"Likert score\")\n",
+    "plt.xlabel(\"Question number\")\n",
+    "plt.grid(color='gray', linestyle='-', linewidth=.25)\n",
+    "plt.ylim((1,7))\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "plt.savefig('Comfortscore.png', dpi=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trust graph\n",
+    "\n",
+    "idth = 0.3\n",
+    "labels = ['10', '11', '12', '13', '14']\n",
+    "x_axis = np.arange(len(labels))\n",
+    "\n",
+    "dataA = testA.Tq\n",
+    "dataB = testB.Tq\n",
+    "dataC = testC.Tq\n",
+    "dataD = testD.Tq\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.title('Likert score of Trust questions') \n",
+    "\n",
+    "plt.bar(x_axis - 0.3, dataA, color='red', width=0.2, label = 'A')\n",
+    "plt.bar(x_axis - 0.1, dataB, color='blue', width=0.2, label = 'B')\n",
+    "plt.bar(x_axis + 0.1, dataC, color='green', width=0.2, label = 'C')\n",
+    "plt.bar(x_axis + 0.3, dataD, color='purple', width=0.2, label = 'D')\n",
+    "\n",
+    "plt.xticks(x_axis, labels)\n",
+    "plt.ylabel(\"Likert score\")\n",
+    "plt.xlabel(\"Question number\")\n",
+    "plt.grid(color='gray', linestyle='-', linewidth=.25)\n",
+    "plt.ylim((1,7))\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "plt.savefig('Trustscore.png', dpi=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Safety graph\n",
+    "\n",
+    "idth = 0.3\n",
+    "labels = ['15', '16', '17', '18']\n",
+    "x_axis = np.arange(len(labels))\n",
+    "\n",
+    "dataA = testA.Sq\n",
+    "dataB = testB.Sq\n",
+    "dataC = testC.Sq\n",
+    "dataD = testD.Sq\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.title('Likert score of Trust questions') \n",
+    "\n",
+    "plt.bar(x_axis - 0.3, dataA, color='red', width=0.2, label = 'A')\n",
+    "plt.bar(x_axis - 0.1, dataB, color='blue', width=0.2, label = 'B')\n",
+    "plt.bar(x_axis + 0.1, dataC, color='green', width=0.2, label = 'C')\n",
+    "plt.bar(x_axis + 0.3, dataD, color='purple', width=0.2, label = 'D')\n",
+    "\n",
+    "plt.xticks(x_axis, labels)\n",
+    "plt.ylabel(\"Likert score\")\n",
+    "plt.xlabel(\"Question number\")\n",
+    "plt.grid(color='gray', linestyle='-', linewidth=.25)\n",
+    "plt.ylim((1,7))\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "plt.savefig('Safetyscore.png', dpi=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "width = 0.3\n",
     "labels = ['General', 'Comfort', 'Trust', 'Safety']\n",
     "x_axis = np.arange(len(labels))\n",
