--- a/TestData/HRI/Questionnaire.ipynb
+++ b/TestData/HRI/Questionnaire.ipynb
@@ -144,10 +144,10 @@
     "\n",
     "# labelsA = [[1-0.3, 1-0.3, 1-0.3, 1-0.3, 1-0.3],[2-0.3,2-0.3,2-0.3,2-0.3,2-0.3],[3-0.3,3-0.3,3-0.3,3-0.3,3-0.3],[4-0.3,4-0.3,4-0.3,4-0.3,4-0.3],[5-0.3,5-0.3,5-0.3,5-0.3,5-0.3]]\n",
     "\n",
-    "plt.scatter(labelsA, testA.Gscat, color = 'red', alpha=0.6)\n",
-    "plt.scatter(labelsB, testB.Gscat, color = 'blue', alpha=0.6)\n",
-    "plt.scatter(labelsC, testC.Gscat, color = 'green', alpha=0.6)\n",
-    "plt.scatter(labelsD, testD.Gscat, color = 'purple', alpha=0.6)\n",
+    "plt.scatter(labelsA, testA.Gscat, color = 'red', alpha=0.6, label = 'A')\n",
+    "plt.scatter(labelsB, testB.Gscat, color = 'blue', alpha=0.6, label = 'B')\n",
+    "plt.scatter(labelsC, testC.Gscat, color = 'green', alpha=0.6, label = 'C')\n",
+    "plt.scatter(labelsD, testD.Gscat, color = 'purple', alpha=0.6, label = 'D')\n",
     "\n",
     "plt.ylabel(\"Likert score\")\n",
     "plt.xlabel(\"Question number\")\n",
